--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-sharp": "^3.2.1",
     "gatsby-plugin-sitemap": "^4.1.0",
     "gatsby-source-filesystem": "^3.2.0",
+    "gatsby-source-wordpress": "^5.7.1",
     "gatsby-transformer-sharp": "^3.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
