--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "start": "npm run develop",
     "cdev": "gatsby clean && gatsby develop",
     "serve": "gatsby serve",
+    "serve-prefix": "gatsby serve --prefix-paths",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
