--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build",
-    "build-prefix": "gatsby build --prefix-paths",
+    "build": "gatsby clean && gatsby build",
+    "build-prefix": "gatsby clean && gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
