--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "gatsby": "^3.5.1",
     "gatsby-plugin-gatsby-cloud": "^2.2.0",
+    "gatsby-plugin-google-gtag": "^3.13.0",
     "gatsby-plugin-image": "^1.2.1",
     "gatsby-plugin-manifest": "^3.2.0",
     "gatsby-plugin-offline": "^4.2.0",
