--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-source-filesystem": "^3.2.0",
     "gatsby-source-wordpress": "^5.7.1",
     "gatsby-transformer-sharp": "^3.2.0",
+    "lottie-web": "^5.7.13",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
