--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -1,7 +1,7 @@
 name: Build and Deploy development
 on:
   push:
-    branches: main
+    branches: development
 jobs:
   build-and-deploy:
     name: Build and deploy craftly.ai
