--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gatsby-plugin-gatsby-cloud": "^2.2.0",
     "gatsby-plugin-google-gtag": "^3.13.0",
     "gatsby-plugin-image": "^1.2.1",
+    "gatsby-plugin-intercom": "^0.1.4",
     "gatsby-plugin-manifest": "^3.2.0",
     "gatsby-plugin-offline": "^4.2.0",
     "gatsby-plugin-react-helmet": "^4.2.0",
